--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -105,7 +105,7 @@ color:#f77b25;
 /* QToolBar > QToolButton:hover:!selected { */
 QToolBar > QToolButton:hover {
 background-color: #6d3914 ;
-color:#221c21;
+color:#000;
 }
 
 QToolBar > QToolButton#ToolbarSpacer:hover:!selected {
@@ -157,11 +157,11 @@ color:#333;
 }
 
 QTabBar::tab:hover:selected {
-background-color: #6e3be6;
+background-color: #333;
 }
 
 QWidget {
-selection-background-color:rgb(255, 239, 9); /* Object highlight color */
+selection-background-color:#6d3914; /* Object highlight color */
 selection-color:#fff;
 outline:0; /* Remove Annoying Focus Rectangle */
 }
@@ -250,7 +250,7 @@ margin: 2px;
 }
 
 QPushButton:hover {
-background-color: qlineargradient(y1:0, y2: 1, stop: 0 #ffffff, stop: 0.1 #ffffff, stop: 0.101 #23409B, stop: 0.9 #23409B, stop: 0.901 #ffffff, stop: 1 #ffffff);
+background-color: #6d3914
 }
 
 QPushButton:focus {
@@ -261,7 +261,7 @@ QPushButton:focus {
 QPushButton:pressed {
 background-color: #f77b25;
 border:1px solid #000000;
-background-color: qlineargradient(y1:0, y2: 1, stop: 0 #00ff00, stop: 0.1 #00ff00, stop: 0.101 #23409B, stop: 0.9 #23409B, stop: 0.901 #00ff00, stop: 1 #00ff00);
+background-color: qlineargradient(y1:0, y2: 1, stop: 0 #00ff00, stop: 0.1 #00ff00, stop: 0.101 #6d3914, stop: 0.9 #6d3914, stop: 0.901 #00ff00, stop: 1 #00ff00);
 }
 
 /* Special handling for statusbar-icons (which are partly QPushButtons) */
@@ -346,7 +346,7 @@ selection-color:transparent;
 
 QAbstractSpinBox {
 padding: 3px 5px 3px 5px;
-background:#fcfcfc;
+background:#5c1e1e;
 font-size:12px;
 min-height:25px;
 outline:0;
@@ -1341,7 +1341,7 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeature
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
 background-color:transparent;
-color:rgb(255, 6, 243);
+color:#333;
 font-weight:bold;
 font-size:14px;
 margin-right:5px;
@@ -1533,12 +1533,12 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected { /* Coin Control Item (selected) */
-background-color:#f77b25;
+background-color:#5e2c09;
 color:#fff;
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:checked { /* Coin Control Item (checked) */
-background-color:#f7f7f7;
+background-color:#5e2c09;
 color:#fff;
 }
 
@@ -1616,7 +1616,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
-color:#f77b25;
+color:#5e2c09;
 font-weight:bold;
 font-size:14px;
 }
@@ -1642,12 +1642,12 @@ margin-right:1px;
 }
 
 QLabel#transactionSumLabel { /* Example of setObjectName for widgets without name */
-color:#333333;
+color:#000;
 font-weight:bold;
 }
  
 QLabel#transactionSum { /* Example of setObjectName for widgets without name */
-color:#333333;
+color:#000;
 }
 
 /**************************** TRANSACTION DETAILS DIALOG ********************************/
